--- a/Admin-Owner_Frontend/Admin_ui/package.json
+++ b/Admin-Owner_Frontend/Admin_ui/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "admin-ui",
+  "name": "super-admin-ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.5",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1"
   },
   "scripts": {
